WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
17980
REGRESSION (
r31177
): Inspector highlighting of webpage not cleared when going to new URL
https://bugs.webkit.org/show_bug.cgi?id=17980
Summary
REGRESSION (r31177): Inspector highlighting of webpage not cleared when going...
Gavin Sherlock
Reported
2008-03-20 23:38:34 PDT
Steps to reproduce: 1. Go to any webpage, right click and Inspect Element. 2. Arrange windows to make Inspector and web page both visible. 3. Select DOM node, so corresponding part of web page is highlighted 4. Switch to web page, and go to new url (e.g. clicking on link). Expected results: Highlighting on page will clear Actual Results: Highlighting on page persists Regression: Not present in Safari 3.1, present in
r31201
. Tested on 10.5.2 on dual G5
Attachments
Patch
(13.46 KB, patch)
2008-03-21 08:48 PDT
,
Timothy Hatcher
aroben
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Gavin Sherlock
Comment 1
2008-03-20 23:41:16 PDT
I should also note that you can resize the webpage, and the highlighting will stay where it is, even to the point that it can no longer overlap the page that it was originally highlighting.
Adam Roben (:aroben)
Comment 2
2008-03-21 07:41:04 PDT
I can't reproduce this in ToT on Windows. Maybe it's a Mac-only issue? I think Tim was seeing something similar.
Timothy Hatcher
Comment 3
2008-03-21 07:59:16 PDT
I know what caused this. When the drawing code was moved to WebCore the fade value is ignored in WebNodeHighlightView. We should just remove the fade.
Timothy Hatcher
Comment 4
2008-03-21 08:48:19 PDT
Created
attachment 19927
[details]
Patch WebKit/mac/ChangeLog | 28 ++++++++ WebKit/mac/WebCoreSupport/WebInspectorClient.mm | 25 +++----- WebKit/mac/WebInspector/WebNodeHighlight.h | 14 +--- WebKit/mac/WebInspector/WebNodeHighlight.m | 77 +++-------------------- WebKit/mac/WebInspector/WebNodeHighlightView.h | 8 --- WebKit/mac/WebInspector/WebNodeHighlightView.m | 28 ++------- 6 files changed, 53 insertions(+), 127 deletions(-)
Adam Roben (:aroben)
Comment 5
2008-03-21 08:50:39 PDT
Comment on
attachment 19927
[details]
Patch 11 how just detaches when it is hidden. Typo: how -> now r=me
Timothy Hatcher
Comment 6
2008-03-21 09:39:23 PDT
Landed in
r31209
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug