WebKit/mac/WebInspector/WebNodeHighlightView.h
@@ -30,17 +30,9 @@
 
 @interface WebNodeHighlightView : NSView {
     WebNodeHighlight *_webNodeHighlight;
-    float _fractionFadedIn;
 }
 - (id)initWithWebNodeHighlight:(WebNodeHighlight *)webNodeHighlight;
 
 - (WebNodeHighlight *)webNodeHighlight;
 - (void)detachFromWebNodeHighlight;
-
-// Value between 0.0 (completely faded out of view) and 1.0 (completely faded into view) that represents
-// the progress of the fading animation.
-- (float)fractionFadedIn;
-- (void)setFractionFadedIn:(float)alpha;
-
-- (void)setHolesNeedUpdateInRect:(NSRect)rect;
 @end
